--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -49,22 +49,27 @@
    border-bottom: 1px solid rgba(73, 73, 73, 0.30);
    padding-block: 2rem;
 }
-.terrain-tab-content .terrain-row * {
-   margin: 0;
+.terrain-tab-content .terrain-row .row-title {
+    margin: 0;
 }
-.terrain-tab-content .terrain-row .row-title * {
+.terrain-tab-content .terrain-row .row-title  * {
    min-width: 150px;
    color: #212121;
    font-size: 22px;
    font-size: calc(16px + (22 - 16) * ((100vw - 360px) / (1920 - 360)));
    font-weight: 500;
    line-height: 1;
+   margin: 0;
 }
 .terrain-tab-content .terrain-row .row-content * {
     color: #393939;
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
+    margin: 10px 0 0 0;
+}
+.terrain-tab-content .terrain-row .row-content *:first-child {
+   margin-top: 0;
 }
 .terrain-tab-content .terrain-row .row-content * ul {
    padding-left: 0;
