refactor: layout/theme.liquid sections/main-collection-product-grid.liquid sections/main-list-collections.liquid

--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -36,7 +36,7 @@
             style="--animation-order: {{ forloop.index }};"
           {% endif %}
         >
-          {% render 'card-collection',
+          {% render 'cstm-card-collection',
             card_collection: collection,
             media_aspect_ratio: section.settings.image_ratio,
             columns: 3
