refactor: layout/theme.liquid

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -379,8 +379,12 @@
 {%- if settings.cart_type == 'drawer' -%}
     <script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
 {%- endif -%}
-{% render 'back-to-the-top' %}
 
+{% comment %}
+ // back to the top //
+
+{%- render 'back-to-the-top' -%}
+{% endcomment %}
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     var inputFields = document.querySelectorAll('.customer-name');
