--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -1,102 +1,109 @@
 .mega-menu {
-  position: static;
+    position: static;
 }
 
 .mega-menu__content {
-  border-left: 0;
-  border-radius: 0;
-  border-right: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding-top: var(--header-height);
-  z-index: 1;
-  background-color: transparent;
+    border-left: 0;
+    border-radius: 0;
+    border-right: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding-top: var(--header-height);
+    z-index: 1;
+    background-color: transparent;
+    transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
 .shopify-section-header-sticky .mega-menu__content {
-  max-height: calc(100vh - var(--header-bottom-position-desktop, 20rem) - 4rem);
+    max-height: calc(100vh - var(--header-bottom-position-desktop, 20rem) - 4rem);
 }
 
 .header-wrapper--border-bottom .mega-menu__content {
-  border-top: 0;
+    border-top: 0;
 }
 
 .js .mega-menu__content {
-  opacity: 0;
-  transform: translateY(-1.5rem);
+    opacity: 0;
+    transform: translateY(-1.5rem);
 }
 
 .mega-menu[open] .mega-menu__content {
-  opacity: 1;
-  transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0px);
 }
+
 .mega-menu[open] .mega-menu__content:before {
-  content: '';
-  left: 0;
-  position: absolute;
-  background: #000000b5;
-  top: var(--header-height);
-  height: calc(100vh - var(--header-height));
-  width: 100%;
-  z-index: -1;
+    content: '';
+    left: 0;
+    position: absolute;
+    background: #000000b5;
+    top: var(--header-height);
+    height: calc(100vh - var(--header-height));
+    width: 100%;
+    z-index: -1;
 }
+
 .mega-menu__list {
-  display: grid;
-  list-style: none;
+    display: grid;
+    list-style: none;
 }
+
 .mega-menu__list .submenu-under .mega-menu-subcategory-list {
-  padding-block: 30px;
+    padding-block: 30px;
 }
+
 .mega-menu__list .mega-menu-subcategory-list {
-  border-right: 1px solid rgba(162, 162, 162, 0.27);
-  padding-inline: 5%;
+    border-right: 1px solid rgba(162, 162, 162, 0.27);
+    padding-inline: 5%;
 }
+
 .mega-menu__list .mega-menu-subcategory-list:first-child {
-  border-left: 1px solid rgba(162, 162, 162, 0.27);
+    border-left: 1px solid rgba(162, 162, 162, 0.27);
 }
+
 .mega-menu__link {
-  color: rgba(var(--color-foreground), 0.75);
-  display: block;
-  line-height: calc(1 + 0.3 / var(--font-body-scale));
-  padding-bottom: 0.6rem;
-  padding-top: 0.6rem;
-  text-decoration: none;
-  transition: text-decoration var(--duration-short) ease;
-  word-wrap: break-word;
+    color: rgba(var(--color-foreground), 0.75);
+    display: block;
+    line-height: calc(1 + 0.3 / var(--font-body-scale));
+    padding-bottom: 0.6rem;
+    padding-top: 0.6rem;
+    text-decoration: none;
+    transition: text-decoration var(--duration-short) ease;
+    word-wrap: break-word;
 }
 
 .mega-menu__link--level-2 {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .header--top-center .mega-menu__list {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  column-gap: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 0;
 }
 
 .header--top-center .mega-menu__list > li {
-  width: 16%;
-  padding-right: 2.4rem;
+    width: 16%;
+    padding-right: 2.4rem;
 }
 
 .mega-menu__link:hover,
 .mega-menu__link--active {
-  color: rgb(var(--color-foreground));
-  text-decoration: underline;
+    color: rgb(var(--color-foreground));
+    text-decoration: underline;
 }
 
 .mega-menu__link--active:hover {
-  text-decoration-thickness: 0.2rem;
+    text-decoration-thickness: 0.2rem;
 }
 
 .mega-menu .mega-menu__list--condensed {
-  display: block;
+    display: block;
 }
 
 .mega-menu__list--condensed .mega-menu__link {
-  font-weight: normal;
+    font-weight: normal;
 }
