--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -468,7 +468,7 @@
     >
         {% assign block_count = 0 %}
         {% for block in section.blocks %}
-            {% assign block_count = block_count |  plus: 1 %}
+            {% assign block_count = block_count | plus: 1 %}
             {% assign visibility = block.settings.visibility %}
             <li class="banner-slide slider__slide" id="Banner-slide-{{ block.id }}" {{ block.shopify_attributes }}>
                 <div
@@ -586,7 +586,7 @@
                                                 {% assign product = all_products[block.settings.product_display_2] %}
 
                                                 <div class="product-item">
-                                                    <a href="{product.url}"
+                                                    <a href="{{ product.url }}"
                                                     ><img
                                                                 src="{{ product.featured_image | img_url: '200x' }}"
                                                                 alt="{{ product.title }}"
@@ -595,10 +595,10 @@
                                                                 height="80px"
                                                         ></a>
                                                     <div>
-                                                        <a href="{product.url}">
+                                                        <a href="{{ product.url }}">
                                                             <p class="product-name">{{ product.title }}</p>
                                                         </a>
-                                                        <a href="{product.url}">
+                                                        <a href="{{ product.url }}">
                                                             <span>{{ product.price | money }}</span>
                                                         </a>
                                                     </div>
@@ -608,7 +608,7 @@
                                                 {% assign product = all_products[block.settings.product_display_3] %}
 
                                                 <div class="product-item">
-                                                    <a href="{product.url}"
+                                                    <a href="{{ product.url }}"
                                                     ><img
                                                                 src="{{ product.featured_image | img_url: '200x' }}"
                                                                 alt="{{ product.title }}"
@@ -617,10 +617,10 @@
                                                                 height="80px"
                                                         ></a>
                                                     <div>
-                                                        <a href="{product.url}">
+                                                        <a href="{{ product.url }}">
                                                             <p class="product-name">{{ product.title }}</p>
                                                         </a>
-                                                        <a href="{product.url}"
+                                                        <a href="{{ product.url }}"
                                                         ><span>{{ product.price | money }}</span></a
                                                         >
                                                     </div>
