Fixed mega menu issues

--- a/snippets/mini-banner.liquid
+++ b/snippets/mini-banner.liquid
@@ -63,6 +63,7 @@
     }
     .mega-menu__list.page-width.min-banner-menu .submenu-under {
         gap: 5%;
+        width: 55%;
     }
     .mega-menu__list.page-width.min-banner-menu .mega-menu-subcategory-list:first-child {
             border-left: none;
