--- a/snippets/promotion-image.liquid
+++ b/snippets/promotion-image.liquid
@@ -17,6 +17,7 @@
         }
         .mega-menu__list.promotional-banner-menu .mega-menu-subcategory-list {
           padding-inline: 10%;
+          width: 42%;
         }
         .image-container.mega-menu-image {
         position: relative;
