--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -54,12 +54,13 @@
     padding-block: 30px;
 }
 
-.mega-menu__list .mega-menu-subcategory-list {
+.mega-menu__list.promotional-banner-menu .mega-menu-subcategory-list {
     border-right: 1px solid rgba(162, 162, 162, 0.27);
+}
+.mega-menu__list .mega-menu-subcategory-list {
     padding-inline: 5%;
 }
-
-.mega-menu__list .mega-menu-subcategory-list:first-child {
+.mega-menu__list.promotional-banner-menu .mega-menu-subcategory-list:nth-child(odd) {
     border-left: 1px solid rgba(162, 162, 162, 0.27);
 }
 
