update: add class in product-variant-options.liquid

--- a/snippets/product-variant-options.liquid
+++ b/snippets/product-variant-options.liquid
@@ -93,7 +93,7 @@
       {% endif %}
       {{ input_dataset }}
     >
-    <label for="{{ input_id }}">
+    <label for="{{ input_id }}" class="swatch-input__label">
       {{ value -}}
       {{ label_unavailable }}
     </label>
